force-app/main/default/objects/HVAC_Warranty__c/HVAC_Warranty__c.object-meta.xml
<CustomObject>
    <label>HVAC Warranty</label>
    <pluralLabel>HVAC Warranties</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>HVAC Warranty Number</label>
        <displayFormat>HW-{00000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>