force-app/main/default/objects/HVAC_Warranty__c/fields/HVAC_Account__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Account__c</fullName>
    <label>HVAC Account</label>
    <type>MasterDetail</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>HVAC Warranties</relationshipLabel>
    <relationshipName>HVAC_Warranties</relationshipName>
    <reparentableMasterDetail>true</reparentableMasterDetail>
</CustomField>