force-app/main/default/objects/HVAC_Warranty__c/fields/HVAC_Asset__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Asset__c</fullName>
    <label>HVAC Asset</label>
    <type>Lookup</type>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>HVAC Warranties</relationshipLabel>
    <relationshipName>HVAC_Warranties_Asset</relationshipName>
</CustomField>