force-app/main/default/objects/HVAC_Warranty__c/fields/HVAC_End_Date__c.field-meta.xml
<CustomField>
    <fullName>HVAC_End_Date__c</fullName>
    <label>HVAC End Date</label>
    <type>Date</type>
</CustomField>