force-app/main/default/objects/HVAC_Warranty__c/fields/HVAC_Installation_Job__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Installation_Job__c</fullName>
    <label>HVAC Installation Job</label>
    <type>Lookup</type>
    <referenceTo>HVAC_Installation_Job__c</referenceTo>
    <relationshipLabel>HVAC Warranties</relationshipLabel>
    <relationshipName>HVAC_Warranties</relationshipName>
</CustomField>