force-app/main/default/objects/HVAC_Warranty__c/fields/HVAC_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Is_Active__c</fullName>
    <label>HVAC Is Active</label>
    <type>Checkbox</type>
    <formula>TODAY() &lt;= HVAC_End_Date__c</formula>
</CustomField>