force-app/main/default/objects/HVAC_Warranty__c/fields/HVAC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Start_Date__c</fullName>
    <label>HVAC Start Date</label>
    <type>Date</type>
</CustomField>