force-app/main/default/objects/HVAC_Warranty__c/fields/HVAC_Status__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Status__c</fullName>
    <label>HVAC Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Pending Activation</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>