force-app/main/default/objects/HVAC_Warranty__c/fields/HVAC_Warranty_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Warranty_Term_Months__c</fullName>
    <label>HVAC Warranty Term (Months)</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>